--- a/SpringWebApp/pom.xml
+++ b/SpringWebApp/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>isamrs</groupId>
 	<artifactId>SpringWebApp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SpringWebApp</name>
-	<description>Demo project for Spring Boot</description>
+	<description>ISAMRS-PROJECT</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -23,7 +23,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
+		<dependency>
+        	<groupId>org.postgresql</groupId>
+        	<artifactId>postgresql</artifactId>
+        </dependency>
+        
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
