--- a/SpringWebApp/src/main/vueapp/package.json
+++ b/SpringWebApp/src/main/vueapp/package.json
@@ -15,6 +15,7 @@
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
+    "vuetify-datetime-picker": "^2.1.1",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
