--- a/SpringWebApp/pom.xml
+++ b/SpringWebApp/pom.xml
@@ -38,6 +38,12 @@
 	        <artifactId>jackson-annotations</artifactId>
 	        <version>2.10.0</version>
 	    </dependency>
+	    
+	    <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mail</artifactId>
+		    <version>2.2.5.RELEASE</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
