--- a/SpringWebApp/src/main/resources/application.properties
+++ b/SpringWebApp/src/main/resources/application.properties
@@ -35,7 +35,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=admin@gmail.com
-spring.mail.password=password
+spring.mail.username=nklppcog@gmail.com
+spring.mail.password=qcalxctivescgexf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
