--- a/SpringWebApp/pom.xml
+++ b/SpringWebApp/pom.xml
@@ -48,13 +48,18 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>org.junit.vintage</groupId>
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.ws</groupId>
+			<artifactId>jaxws-api</artifactId>
+			<version>2.3.1</version>
 		</dependency>
 	</dependencies>
 
@@ -66,4 +71,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 </project>
