--- a/SpringWebApp/src/main/vueapp/package.json
+++ b/SpringWebApp/src/main/vueapp/package.json
@@ -16,7 +16,8 @@
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
     "vuetify-datetime-picker": "^2.1.1",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
