--- a/SpringWebApp/src/main/resources/application.properties
+++ b/SpringWebApp/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/jpa
 
 #Navode se kredencijali za konekciju na server baze
 spring.datasource.username=postgres
-spring.datasource.password=1331
+spring.datasource.password=nklppc
 
 #Umesto da sami pišemo SQL skriptu za kreiranje tabela u bazi, Hibernate kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih (create-drop)
 #https://www.baeldung.com/spring-boot-data-sql-and-schema-sql
@@ -36,6 +36,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=nklppcog@gmail.com
+send.from.email= nklppcog@gmail.com
 spring.mail.password=qcalxctivescgexf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
