--- a/SpringWebApp/src/main/resources/application.properties
+++ b/SpringWebApp/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/jpa
 
 #Navode se kredencijali za konekciju na server baze
 spring.datasource.username=postgres
-spring.datasource.password=1331
+spring.datasource.password=nklppc
 
 #Umesto da sami pišemo SQL skriptu za kreiranje tabela u bazi, Hibernate kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih (create-drop)
 #https://www.baeldung.com/spring-boot-data-sql-and-schema-sql
@@ -40,3 +40,6 @@ send.from.email= nklppcog@gmail.com
 spring.mail.password=qcalxctivescgexf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+#za lenjo ucitavanje
