zakazivanje unapred definisanih pregleda

--- a/SpringWebApp/src/main/resources/application.properties
+++ b/SpringWebApp/src/main/resources/application.properties
@@ -43,3 +43,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 #za lenjo ucitavanje
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
