--- a/SpringWebApp/pom.xml
+++ b/SpringWebApp/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>isamrs</groupId>
 	<artifactId>SpringWebApp</artifactId>
 	<name>SpringWebApp</name>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 
 	<properties>
 		<java.version>1.8</java.version>
