--- a/SpringWebApp/src/main/resources/application.properties
+++ b/SpringWebApp/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.platform=postgres
 
 #Navodi se URL do baze koja je pokrenuta u lokalu na podrazumevanom portu 5432 i na serveru je kreirana šema baze pod nazivom "jpa"
 #https://www.pgadmin.org/docs/pgadmin4/4.14/schema_dialog.html (ako koristimo Hibernate za kreiranje tabela, SQL deo sa linka nije potreban)
-spring.datasource.url=postgresql://@ec2-54-217-236-206.eu-west-1.compute.amazonaws.com:5432/d3trvkfgld903
+spring.datasource.url=postgresql://ec2-54-217-236-206.eu-west-1.compute.amazonaws.com:5432/d3trvkfgld903
 
 
 
