--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ addons:
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
-  - ./mvnw clean install -DskipTests=false -B
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install -DskipTests=false -B sonar:sonar
 
 dist: trusty
 
