--- a/vueapp/package.json
+++ b/vueapp/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-google-charts": "^0.3.2",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.28",
     "vuetify-datetime-picker": "^2.1.1",
