--- a/vueapp/package.json
+++ b/vueapp/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.28",
     "vuetify-datetime-picker": "^2.1.1",
+    "vuetify-google-autocomplete": "^2.0.1",
     "vuex": "^3.1.3",
     "vuex-persistedstate": "^3.0.1"
   },
