--- a/vueapp/package.json
+++ b/vueapp/package.json
@@ -9,32 +9,32 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "core-js": "^3.6.4",
-    "moment": "^2.24.0",
+    "core-js": "^3.6.5",
+    "moment": "^2.26.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-google-charts": "^0.3.2",
-    "vue-router": "^3.1.6",
-    "vuetify": "^2.2.28",
+    "vue-router": "^3.3.4",
+    "vuetify": "^2.3.0",
     "vuetify-datetime-picker": "^2.1.1",
     "vuetify-google-autocomplete": "^2.0.1",
-    "vuex": "^3.1.3",
+    "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-router": "^4.3.0",
-    "@vue/cli-plugin-vuex": "^4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-eslint": "^4.3.1",
+    "@vue/cli-plugin-router": "^4.4.4",
+    "@vue/cli-plugin-vuex": "^4.4.4",
+    "@vue/cli-service": "^4.3.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.19.0",
+    "sass": "^1.26.8",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.5.0"
   },
   "eslintConfig": {
     "root": true,
